--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
+    "vue-json-pretty": "^1.6.3",
     "vue-router": "^3.1.6"
   },
   "devDependencies": {
