--- a/.styleci.yml
+++ b/.styleci.yml
@@ -1,2 +1,20 @@
+vue:
+  tab-width: 4
+  use-tabs: false
+  print-width: 120
+  double-quotes: false
+  trailing-commas: es5
+  semicolons: true
+  arrow-parens: always
+  bracket-spacing: true
+  indent-script-and-style: false
+  finder:
+    exclude:
+      - "modules"
+      - "node_modules"
+      - "storage"
+      - "vendor"
+    name: "*.vue"
+
 php: false
 vue: true
